--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -8,22 +8,14 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    needs: [unit, e2e]
-
-    strategy:
-      matrix:
-        node-version: [20.x]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-
       - name: push
         env:
           WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
-          API_SECRET: ${{ secrets.API_SECRET }}
+          API_SECRET_PROD: ${{ secrets.API_SECRET_PROD }}
         run: |
-          curl -X GET "$WEBHOOK_URL/$API_SECRET"
+          curl -X GET "$WEBHOOK_URL/$API_SECRET_PROD"
